fix: modify CustomerMapper and ProductMapper
Took 43 minutes